# home-assistant-agent

./: .bumpversion.cfg  .codespellignore  .env.example  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  Dockerfile  MANIFEST.in  README.md  a2a.json  compose.yml  connector_manifest.yml  debug.Dockerfile  index.html  mcp_config.json  mkdocs.yml  pyproject.toml  sitemap.xml
.specify/specs/code-enhancement-20260512/: CHECKLIST.md  DRIFT_REPORT.md  spec.json  spec.md  tasks.json  tasks.md
.specify/specs/code-enhancement-20260522/: spec.json  spec.md  tasks.json  tasks.md
.specify/specs/code-enhancement-20260524/: spec.json  spec.md  tasks.json  tasks.md
concepts/: index.html
configuration/: index.html
deployment/: index.html
docker/: Dockerfile  agent.compose.yml  compose.yml  debug.Dockerfile  mcp.compose.yml
docs/: concepts.md  configuration.md  deployment.md  index.md  installation.md  legacy_readme.md  overview.md  platform.md  usage.md
home_assistant_agent/: __init__.py  __main__.py  agent_server.py  api_client.py  auth.py  graph_config.py  home_assistant_api.py  home_assistant_models.py  kg_ingest.py  mcp_config.json  mcp_server.py
home_assistant_agent/agent/: IDENTITY.md
home_assistant_agent/agent_data/: MCP_AGENTS.md  NODE_AGENTS.md  knowledge_graph.db  knowledge_graph.db.wal  mcp_config.json
home_assistant_agent/api/: __init__.py  api_client_base.py  api_client_rest.py  api_client_websocket.py
home_assistant_agent/connectors/: mcp_source_presets.json  tool_schema_fingerprints.json
home_assistant_agent/mcp/: __init__.py  mcp_calendar.py  mcp_config.py  mcp_entities.py  mcp_events.py  mcp_history.py  mcp_logbook.py  mcp_panels.py  mcp_services.py  mcp_states.py  mcp_system.py  mcp_voice.py
home_assistant_agent/ontology/: __init__.py  certification.json  homeassistant.ttl
home_assistant_agent/prompts/: home_automation_specialist.json  main_agent.json
installation/: index.html
legacy_readme/: index.html
overview/: index.html
platform/: index.html
scripts/: verify_api_integration.py
search/: search_index.json
tests/: conftest.py  test_action_discovery.py  test_concept_parity.py  test_coverage.py  test_init.py  test_init_dynamics.py  test_kg_ingest.py  test_startup.py
usage/: index.html
(+14 files in other folders)
