[build-system]
requires = [ "setuptools>=80.9.0", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "home-assistant-agent"
version = "1.0.2"
description = "Agent for interacting with Home Assistant REST API"
readme = "README.md"
classifiers = [ "Development Status :: 4 - Beta", "License :: OSI Approved :: MIT License", "Environment :: Console", "Operating System :: POSIX :: Linux", "Programming Language :: Python :: 3",]
requires-python = ">=3.11, <3.15"
dependencies = [ "agent-utilities[mcp]>=1.27.1,<2.0.0",]
[[project.authors]]
name = "Project Maintainers"
email = "maintainers@users.noreply.github.com"

[project.license]
text = "MIT"

[project.optional-dependencies]
mcp = [ "agent-utilities[mcp]>=1.27.1,<2.0.0",]
agent = [ "agent-utilities[agent-runtime,logfire]>=1.27.1,<2.0.0",]
all = [ "agent-utilities[mcp,agent-runtime,logfire]>=1.27.1,<2.0.0",]
test = [
    "pytest-xdist>=3.6.0", "pytest", "pytest-asyncio", "pytest-cov",]

[project.scripts]
home-assistant-mcp = "home_assistant_agent.mcp_server:mcp_server"
home-assistant-agent = "home_assistant_agent.agent_server:agent_server"

[project.entry-points."agent_utilities.skill_providers"]
home-assistant-agent = "home_assistant_agent.skills"

[project.entry-points."agent_utilities.ontology_providers"]
home-assistant-agent = "home_assistant_agent.ontology"

[project.entry-points."agent_utilities.source_connector_providers"]
home-assistant-agent = "home_assistant_agent.connectors"

[project.entry-points."agent_utilities.prompt_providers"]
home-assistant-agent = "home_assistant_agent.prompts"

[tool.setuptools]
include-package-data = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true

[dependency-groups]
dev = [
    "pytest-timeout>=2.4.0",
]

[tool.setuptools.package-data]
home_assistant_agent = [ "mcp_config.json", "skills/**", "prompts/**", "ontology/**", "connectors/**",]

[tool.ruff.lint]
select = [ "E", "F", "I", "UP", "B",]
ignore = [ "E402", "E501", "B008",]

[tool.setuptools.packages.find]
where = [ ".",]

[tool.vulture]
ignore_names = ["request", "config"]
